force-app/main/default/objects/Activity_History__c/fields/Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Disbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Disbursement</label>
    <referenceTo>Disbursement__c</referenceTo>
    <relationshipLabel>Activity Histories</relationshipLabel>
    <relationshipName>Activity_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>