force-app/main/default/objects/Activity_History__c/fields/From_Stage__c.field-meta.xml
<CustomField>
    <fullName>From_Stage__c</fullName>
    <label>From Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>