force-app/main/default/objects/Activity_History__c/fields/From_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>From_To_Queue__c</fullName>
    <label>From-To Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>