force-app/main/default/objects/Activity_History__c/fields/From_User__c.field-meta.xml
<CustomField>
    <fullName>From_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Application_Movement_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>