force-app/main/default/objects/Activity_History__c/fields/isSendBack__c.field-meta.xml
<CustomField>
    <fullName>isSendBack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSendBack</label>
    <type>Checkbox</type>
</CustomField>