force-app/main/default/objects/Activity_History__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Activity Histories</relationshipLabel>
    <relationshipName>Activity_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>