force-app/main/default/objects/Activity_History__c/fields/NameFormula__c.field-meta.xml
<CustomField>
    <fullName>NameFormula__c</fullName>
    <formula>IF(ISPICKVAL(Source__c, &apos;Query&apos;),Query_Name__c , Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>