force-app/main/default/objects/Activity_History__c/fields/NameUrl__c.field-meta.xml
<CustomField>
    <fullName>NameUrl__c</fullName>
    <formula>IF(ISPICKVAL(Source__c, &apos;Query&apos;), Query_Id__c , Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>