force-app/main/default/objects/Activity_History__c/fields/Query_Id__c.field-meta.xml
<CustomField>
    <fullName>Query_Id__c</fullName>
    <label>Query Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>