force-app/main/default/objects/Activity_History__c/fields/Query_Name__c.field-meta.xml
<CustomField>
    <fullName>Query_Name__c</fullName>
    <label>Query Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>