force-app/main/default/objects/Activity_History__c/fields/To_Stage__c.field-meta.xml
<CustomField>
    <fullName>To_Stage__c</fullName>
    <label>To Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>