force-app/main/default/objects/Activity_History__c/fields/To_User_Name__c.field-meta.xml
<CustomField>
    <fullName>To_User_Name__c</fullName>
    <formula>To_User__r.FirstName +&apos; &apos;+ To_User__r.MiddleName + &apos; &apos; + To_User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To User Name</label>
    <type>Text</type>
</CustomField>